changes to no wrap for phone controls and prevents default on the touchJump event

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ main {
 #phone-controls {
     visibility: hidden;
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
     justify-content: center;
     user-select: none;
 }
